# TianGong-AI-for-Sustainability

./: .gitignore  AGENTS.md  AGENTS_CN.md  AGENTS_zh.md  ARCHITECTURE_REVIEW.md  Dockerfile  QUICKSTART.md  QUICKSTART_CN.md  README.md  README_CN.md  SETUP_GUIDE.md  SETUP_GUIDE_CN.md  WORKSPACES.md  WORKSPACES_CN.md  install_macos.sh  install_ubuntu.sh  install_windows.ps1  package.json  pyproject.toml
.secrets/: secrets.example.toml
docs/: architecture.md
reports/: lca_citations.md
scripts/: audit_sources.py  collect_mcp_corpus.py  compose_inline_prompt.py  init_study_workspace.py  run_deep_research.py
scripts/examples/: run_deep_research.py
scripts/integrations/: collect_mcp_corpus.py
scripts/ops/: audit_sources.py  init_study_workspace.py
scripts/tooling/: compose_inline_prompt.py
specs/: architecture.md  architecture_CN.md  architecture_zh.md
specs/prompts/: default.md  default_CN.md  research_template.md  research_template_CN.md
src/tiangong_ai_for_sustainability/: __init__.py  config.py  deep_research.py
src/tiangong_ai_for_sustainability/adapters/: __init__.py  base.py
src/tiangong_ai_for_sustainability/cli/: __init__.py  adapters.py  main.py
src/tiangong_ai_for_sustainability/core/: __init__.py  context.py  logging.py  mcp_client.py  mcp_config.py  prompts.py  registry.py
src/tiangong_ai_for_sustainability/llm/: __init__.py  gemini_deep_research.py  openai_deep_research.py
src/tiangong_ai_for_sustainability/resources/: __init__.py
src/tiangong_ai_for_sustainability/services/: __init__.py  research.py
tasks/: backlog.yaml  blueprint.yaml
tests/: README.md  conftest.py  test_arxiv_adapter.py  test_cli.py  test_cli_adapters.py  test_collect_mcp_corpus.py  test_core.py  test_crossref_adapter.py  test_deep_research.py  test_dify_adapter.py  test_kaggle_adapter.py  test_mcp_client.py  test_mcp_config.py  test_openai_deep_research_adapter.py  test_p0_adapters.py  test_registry.py  test_remote_mcp_adapter.py  test_services.py  test_services_mcp.py  test_workflow.py  test_world_bank_adapter.py
tests/llm/: test_gemini_deep_research_adapter.py  test_gemini_deep_research_client.py
tests/scripts/: test_collect_mcp_corpus.py  test_script_imports.py
tests/workflows/: test_workflows.py
user_prompts/: example.md
(+52 files in other folders)
